--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "prisma": "^5.1.1"
   }
 }
